Reduce code, fix alert bar's z-index

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -20,6 +20,7 @@ $icon-font-path: "../scripts/vendor/bootstrap-sass-official/assets/fonts/bootstr
 .intro-alert, .dashboard-alert {
   text-align: center;
   margin-bottom: 0;
+  z-index: 99;
   position: fixed;
   top: 0;
   left: 0;
